--- a/Monetrix/Views/Account/Delete.cshtml
+++ b/Monetrix/Views/Account/Delete.cshtml
@@ -1,61 +1,41 @@
 ﻿@model Monetrix.Models.Account
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Account";
 }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Account</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Balance)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Balance)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccountNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccountType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CloseDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CloseDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Address)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="AccountId" />
-        <button type="submit" class="btn btn-danger">Delete</button> |
-        <a asp-action="Details" asp-controller="Account" asp-route-id="@Model.AccountId" class="btn btn-secondary">Cancel</a>
-    </form>
+<div class="container mt-4">
+    <div class="bank-card p-4">
+        <h3 class="text-danger mb-3">Are you sure you want to delete this account?</h3>
+
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.IsActive)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.IsActive)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Balance)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Balance)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.AccountNumber)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.AccountNumber)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.AccountType)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.AccountType)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CreatedDate)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.CreatedDate)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CloseDate)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.CloseDate)</dd>
+
+            <dt class="col-sm-3">Customer Address</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Customer.Address)</dd>
+        </dl>
+
+        <form asp-action="Delete" method="post" class="mt-4 d-flex justify-content-end gap-2">
+            <input type="hidden" asp-for="AccountId" />
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Details" asp-controller="Account" asp-route-id="@Model.AccountId" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
 </div>
