--- a/Monetrix/Views/AppUser/Delete.cshtml
+++ b/Monetrix/Views/AppUser/Delete.cshtml
@@ -4,38 +4,45 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Are you sure you want to delete this user?</h2>
+<div class="container mt-4">
+    <div class="bank-card p-4">
+        <h2 class="text-danger mb-3">Are you sure you want to delete this user?</h2>
 
-<div>
-    <h4>AppUser</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NationalId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NationalId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Position)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Position)
-        </dd>
-    </dl>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.FullName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FullName)
+            </dd>
 
-    <form asp-action="Delete" method="post">
-        <input type="hidden" asp-for="Id" />
-        <button type="submit" class="btn btn-danger">Delete</button>
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-    </form>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.NationalId)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.NationalId)
+            </dd>
+
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Position)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Position)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete" method="post" class="mt-4 d-flex justify-content-end gap-2">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
 </div>
