--- a/Monetrix/Views/Customer/Index.cshtml
+++ b/Monetrix/Views/Customer/Index.cshtml
@@ -10,7 +10,7 @@
 
 @if (Model.Any())
 {
-    <table class="table">
+    <table>
         <thead>
             <tr>
                 <th><label asp-for="@Model.First().FullName"></label></th>
@@ -52,6 +52,6 @@ else
     <div class="alert alert-warning">No customers found.</div>
 }
 
-<p>
-    <a asp-action="Create" class="btn btn-success">Add New Customer</a>
+<p class="btn-container">
+    <a asp-action="Create" class="btn-success">Add New Customer</a>
 </p>
