--- a/Monetrix/Views/Loan/Delete.cshtml
+++ b/Monetrix/Views/Loan/Delete.cshtml
@@ -1,67 +1,45 @@
 ﻿@model Monetrix.Models.Loan
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Loan";
 }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Loan</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Amount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Amount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InterestRate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InterestRate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Purpose)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Purpose)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AppUser.FullName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Address)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="LoanId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Details" asp-route-id="@Model.LoanId" class="btn btn-secondary">Cancel</a>
-    </form>
+<div class="container mt-4">
+    <div class="bank-card p-4">
+        <h3 class="text-danger mb-3">Are you sure you want to delete this loan?</h3>
+
+        <hr />
+
+        <dl class="row">
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Amount)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Amount)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.InterestRate)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.InterestRate)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.StartDate)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.StartDate)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.EndDate)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.EndDate)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Status)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Status)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Purpose)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Purpose)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.AppUser)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.AppUser.FullName)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Customer)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Customer.Address)</dd>
+        </dl>
+
+        <form asp-action="Delete" method="post" class="mt-4 d-flex justify-content-end gap-2">
+            <input type="hidden" asp-for="LoanId" />
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Details" asp-route-id="@Model.LoanId" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
 </div>
