--- a/Monetrix/Views/Loan/Details.cshtml
+++ b/Monetrix/Views/Loan/Details.cshtml
@@ -1,75 +1,54 @@
 ﻿@model Monetrix.Models.Loan
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Loan Details";
 }
 
-<div>
-    <h4>Loan</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Amount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Amount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InterestRate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InterestRate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Purpose)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Purpose)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AppUser.FullName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.FullName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.NationalId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.NationalId)
-        </dd>
-    </dl>
-</div>
+<div class="container mt-4">
+    <div class="bank-card shadow rounded-3 overflow-hidden">
 
-<div>
-    @if (User.IsInRole("Admin") || User.IsInRole("LoanOfficer"))
-    {
-        <a asp-action="Edit" asp-route-id="@Model?.LoanId" class="btn btn-warning">Edit</a>
-        <a asp-action="Delete" asp-route-id="@Model?.LoanId" class="btn btn-danger">Delete</a>
-    }
-    <a asp-action="Details" asp-controller="Customer" asp-route-id="@Model?.CustomerId" class="btn btn-secondary">Back</a>
+        <div class="section-header rounded-top">
+            <span>Loan Info</span>
+        </div>
+
+        <div class="card-body p-4">
+            <dl class="row">
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Amount)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Amount)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.InterestRate)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.InterestRate)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.StartDate)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.StartDate)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.EndDate)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.EndDate)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Status)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Status)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Purpose)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Purpose)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.AppUser)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.AppUser.FullName)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Customer)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Customer.FullName)</dd>
+
+                <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Customer.NationalId)</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Customer.NationalId)</dd>
+            </dl>
+
+            <div class="mt-4 d-flex justify-content-end gap-2">
+                @if (User.IsInRole("Admin") || User.IsInRole("LoanOfficer"))
+                {
+                    <a asp-action="Edit" asp-route-id="@Model?.LoanId" class="btn btn-warning">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@Model?.LoanId" class="btn btn-danger">Delete</a>
+                }
+                <a asp-action="Details" asp-controller="Customer" asp-route-id="@Model?.CustomerId" class="btn btn-secondary">Back</a>
+            </div>
+        </div>
+    </div>
 </div>
