--- a/Monetrix/Views/AppUser/Details.cshtml
+++ b/Monetrix/Views/AppUser/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Employee Details";
 }
 
-<div class="container mt-4">
+<div class="container card-body mt-4">
     <div class="bank-card shadow rounded-3 overflow-hidden">
         
         <div class="section-header">
