--- a/Monetrix/Views/Customer/Index.cshtml
+++ b/Monetrix/Views/Customer/Index.cshtml
@@ -35,11 +35,20 @@
                     <td>@item.Phone</td>
                     <td>@item.Gender</td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.CustomerId" class="btn btn-sm btn-info">Details</a>
+
+                        <a asp-action="Details" asp-route-id="@item.CustomerId" title="Details">
+                            <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
+                        </a>
+
                         @if (User.IsInRole("Admin") || User.IsInRole("CustomerService"))
                         {
-                                <a asp-action="Edit" asp-route-id="@item.CustomerId" class="btn btn-warning">Edit</a> 
-                                <a asp-action="Delete" asp-route-id = "@item.CustomerId" class= "btn btn-danger"> Delete </a>
+                            <a asp-action="Edit" asp-route-id="@item.CustomerId" title="Edit">
+                                <img src="~/Icons/user.png" alt="Edit" style="width:50px; height:50px;">
+                            </a>
+
+                            <a asp-action="Delete" asp-route-id = "@item.CustomerId"  tite="Delete">
+                                <img src="~/Icons/trash.png" alt="Delete" style="width:50px; height:50px;">
+                             </a>
                         }
                     </td>
                 </tr>
