--- a/Monetrix/Views/Customer/Details.cshtml
+++ b/Monetrix/Views/Customer/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Customer Details";
 }
 
-<div class="container mt-4">
+<div class="container card-body mt-4">
     <div class="bank-card shadow rounded-3 overflow-hidden">
 
         <div class="section-header">
@@ -77,7 +77,9 @@
                         <td>@account.AccountType</td>
                         <td>@account.Balance.ToString("C")</td>
                         <td>
-                            <a asp-controller="Account" asp-action="Details" asp-route-id="@account.AccountId" class="btn btn-sm btn-info">Details</a>
+                            <a asp-controller="Account" asp-action="Details" asp-route-id="@account.AccountId" title="Details">
+                                <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
+                            </a>
                         </td>
                     </tr>
                 }
@@ -123,7 +125,9 @@
                         <td>@loan.StartDate.ToShortDateString()</td>
                         <td>@loan.EndDate.ToShortDateString()</td>
                         <td>
-                            <a asp-controller="Loan" asp-action="Details" asp-route-id="@loan.LoanId" class="btn btn-sm btn-info">Details</a>
+                            <a asp-controller="Loan" asp-action="Details" asp-route-id="@loan.LoanId" title="Details">
+                                <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
+                            </a>
                         </td>
                     </tr>
                 }
