--- a/Monetrix/Views/Loan/Index.cshtml
+++ b/Monetrix/Views/Loan/Index.cshtml
@@ -56,7 +56,9 @@
                 @Html.DisplayFor(modelItem => item.AppUser.FullName)
             </td>
             <td>
-                    <a asp-action="Details" asp-controller="Customer" asp-route-id="@item.CustomerId" class="btn btn-sm btn-info">Details</a>
+                    <a asp-action="Details"  asp-route-id="@item.LoanId" title="Details">
+                        <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
+                    </a>
             </td>
         </tr>
 }
