--- a/Monetrix/Views/Transaction/Index.cshtml
+++ b/Monetrix/Views/Transaction/Index.cshtml
@@ -57,7 +57,9 @@
                 @Html.DisplayFor(modelItem => item.AppUser.FullName)
             </td>
             <td>
-                    <a asp-action="Details" asp-controller="Account" asp-route-id="@item.SenderAccountId" class="btn btn-sm btn-info">Details</a>
+                    <a asp-action="Details"  asp-route-id="@item.TransactionId" title="Details">
+                        <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
+                    </a>
             </td>
         </tr>
 }
