--- a/Monetrix/Views/Account/Create.cshtml
+++ b/Monetrix/Views/Account/Create.cshtml
@@ -5,48 +5,64 @@
     ViewData["Title"] = "Create";
 }
 
-<h4>Account</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <input type="hidden" asp-for="CustomerId" />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="AccountNumber" class="control-label"></label>
-                <input asp-for="AccountNumber" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="AccountType" class="control-label"></label>
-                <select asp-for="AccountType" asp-items="Html.GetEnumSelectList<AccountType>()" class="form-control">
-                    <option value="">-- Select Account Type --</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="CloseDate" class="control-label"></label>
-                <input asp-for="CloseDate" class="form-control" />
-            </div>          
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a asp-action="Details" asp-controller="Customer" asp-route-id="@Model.CustomerId" class="btn btn-secondary">Cancel</a>
-            </div>
-        </form>
+<div class="container mt-5">
+    <div class="card shadow-lg bank-card">
+        <div class="card-header-custom d-flex justify-content-center align-items-center rounded-top">
+            <span>New Account</span>
+        </div>
+
+        <div class="card-body">
+            <form asp-action="Create">
+                <input type="hidden" asp-for="CustomerId" />
+                <div asp-validation-summary="All" class="text-danger mb-3"></div>
+
+                <div class="row g-3">
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" asp-for="IsActive" />
+                            <label class="form-check-label" asp-for="IsActive"></label>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label asp-for="Balance" class="form-label"></label>
+                        <input asp-for="Balance" class="form-control" />
+                    </div>
+
+                    <div class="col-12">
+                        <label asp-for="AccountNumber" class="form-label"></label>
+                        <input asp-for="AccountNumber" class="form-control" />
+                    </div>
+
+                    <div class="col-12">
+                        <label asp-for="AccountType" class="form-label"></label>
+                        <select asp-for="AccountType" asp-items="Html.GetEnumSelectList<AccountType>()" class="form-control">
+                            <option value="">-- Select Account Type --</option>
+                        </select>
+                    </div>
+
+                    <div class="col-12">
+                        <label asp-for="CreatedDate" class="form-label"></label>
+                        <input asp-for="CreatedDate" class="form-control" />
+                    </div>
+
+                    <div class="col-12">
+                        <label asp-for="CloseDate" class="form-label"></label>
+                        <input asp-for="CloseDate" class="form-control" />
+                    </div>
+                </div>
+
+                <div class="text-end mt-4">
+                    <button type="submit" class="btn btn-primary me-2 px-4">Create</button>
+                    <a asp-action="Details" asp-controller="Customer" asp-route-id="@Model.CustomerId" class="btn btn-secondary px-4">Cancel</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
