--- a/Monetrix/Views/Auth/Login.cshtml
+++ b/Monetrix/Views/Auth/Login.cshtml
@@ -1,33 +1,43 @@
-﻿@using Monetrix.Enums
-@model Monetrix.ViewModels.LoginViewModel
+﻿@model Monetrix.ViewModels.LoginViewModel
 
 @{
     ViewData["Title"] = "Login";
 }
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" />
-            </div>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+            <div class="card shadow-lg">
+                <div class="card-header-custom d-flex justify-content-center align-items-center rounded-top">
+                    Login
+                </div>
+                <div class="card-body">
+                    <form asp-action="Login" method="post">
+                        <div asp-validation-summary="All" class="text-danger mb-3"></div>
 
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-            </div>
+                        <div class="form-group mb-3">
+                            <label asp-for="UserName" class="form-label"></label>
+                            <input asp-for="UserName" class="form-control" />
+                        </div>
 
-             <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-                </label>
-            </div>
+                        <div class="form-group mb-3">
+                            <label asp-for="Password" class="form-label"></label>
+                            <input asp-for="Password" type="password" class="form-control" />
+                        </div>
 
-            <button type="submit" class="btn btn-primary">Login</button>
-            <a asp-action="Index" asp-controller="Home" class="btn btn-secondary">Cancel</a>
-        </form>
+                        <div class="form-group form-check mb-3">
+                            <input class="form-check-input" asp-for="RememberMe" />
+                            <label class="form-check-label" asp-for="RememberMe"></label>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
+                            <button type="submit" class="btn btn-primary px-4">Login</button>
+                            <a asp-action="Index" asp-controller="Home" class="btn btn-secondary px-4">Cancel</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
