Add Profile View + Update 'Create' Button Color & 'Back' Button Behavior in Details Views

--- a/Monetrix/Views/AppUser/Details.cshtml
+++ b/Monetrix/Views/AppUser/Details.cshtml
@@ -6,7 +6,7 @@
 <div class="container card-body mt-4">
     <div class="bank-card shadow rounded-3 overflow-hidden">
         
-        <div class="section-header">
+        <div class="section-header justify-content-center align-items-center">
             <span>Employee Details</span>
         </div>
 
