--- a/Monetrix/Views/AppUser/Index.cshtml
+++ b/Monetrix/Views/AppUser/Index.cshtml
@@ -56,5 +56,5 @@ else
 }
 
 <p class="btn-container">
-    <a asp-action="Create" class="btn-success">Add New Employee</a>
+    <a asp-action="Create" class="btn btn-bank-create mt-3">Add New Employee</a>
 </p>
