--- a/Monetrix/Views/Auth/ChangePassword.cshtml
+++ b/Monetrix/Views/Auth/ChangePassword.cshtml
@@ -31,7 +31,8 @@
                         </div>
 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-primary px-4">Change</button>
+                            <button type="submit" class="btn btn-primary">Change</button>
+                            <a asp-action="Profile" asp-controller="Auth" class="btn btn-secondary">Back</a>
                         </div>
                     </form>
                 </div>
