--- a/Monetrix/Views/Customer/Index.cshtml
+++ b/Monetrix/Views/Customer/Index.cshtml
@@ -62,5 +62,5 @@ else
 }
 
 <p class="btn-container">
-    <a asp-action="Create" class="btn-success">Add New Customer</a>
+    <a asp-action="Create" class="btn btn-bank-create mt-3">Add New Customer</a>
 </p>
