--- a/Monetrix/Views/Account/Details.cshtml
+++ b/Monetrix/Views/Account/Details.cshtml
@@ -7,8 +7,8 @@
 <div class="container mt-4">
     <div class="bank-card shadow rounded-3 overflow-hidden">
 
-        <div class="card-header-custom">
-            <h3 class="mb-0">Account Info</h3>
+        <div class="card-header-custom d-flex justify-content-center align-items-center">
+            <span>Account Info</span>
         </div>
 
         <div class="p-4">
@@ -46,7 +46,14 @@
                     <a asp-action="Edit" asp-route-id="@Model.AccountId" class="btn btn-warning">Edit</a>
                     <a asp-action="Delete" asp-route-id="@Model.AccountId" class="btn btn-danger">Delete</a>
                 }
-                <a asp-action="Details" asp-controller="Customer" asp-route-id="@Model.CustomerId" class="btn btn-secondary">Back</a>
+                @{
+                    var returnUrl = Context.Request.Query["returnUrl"].ToString();
+                    if (string.IsNullOrEmpty(returnUrl))
+                    {
+                        returnUrl = Url.Action("Index", "Account");
+                    }
+                }
+                <a href="@returnUrl" class="btn btn-secondary">Back</a>
             </div>
         </div>
     </div>
@@ -81,7 +88,7 @@
                         <td>@transaction.Amount.ToString("C")</td>
                         <td>@transaction.TransactionDate.ToShortDateString()</td>
                         <td>
-                            <a asp-controller="Transaction" asp-action="Details" asp-route-id="@transaction.TransactionId" title="Details">
+                            <a asp-controller="Transaction" asp-action="Details" asp-route-id="@transaction.TransactionId" asp-route-returnUrl="@Url.Action("Details", "Account", new { id = Model.AccountId })" title="Details">
                                 <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
                             </a>
                         </td>
@@ -119,7 +126,7 @@
                         <td>@transaction.Amount.ToString("C")</td>
                         <td>@transaction.TransactionDate.ToShortDateString()</td>
                         <td>
-                            <a asp-controller="Transaction" asp-action="Details" asp-route-id="@transaction.TransactionId" title="Details">
+                            <a asp-controller="Transaction" asp-action="Details" asp-route-id="@transaction.TransactionId" asp-route-returnUrl="@Url.Action("Details", "Account", new { id = Model.AccountId })" title="Details">
                                 <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
                             </a>
                         </td>
@@ -136,7 +143,7 @@
     @if (User.IsInRole("Admin") || User.IsInRole("Auditor") || User.IsInRole("Teller"))
     {
         <p class="btn-container">
-            <a asp-controller="Transaction" asp-action="Create" asp-route-accountId="@Model.AccountId" class="btn-success">Create New Transaction</a>
+            <a asp-controller="Transaction" asp-action="Create" asp-route-accountId="@Model.AccountId" class="btn btn-bank-create mt-3">Create New Transaction</a>
         </p>
     }
 }
