--- a/Monetrix/Views/Account/Index.cshtml
+++ b/Monetrix/Views/Account/Index.cshtml
@@ -55,7 +55,7 @@
                 <td>Running</td>
             }
             <td>
-                    <a asp-action="Details" asp-route-id="@item.AccountId" title="Details">
+                    <a asp-action="Details" asp-route-id="@item.AccountId" asp-route-returnUrl="@Url.Action("Index", "Account")" title="Details">
                         <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
                     </a>
             </td>
