--- a/Monetrix/Views/Transaction/Index.cshtml
+++ b/Monetrix/Views/Transaction/Index.cshtml
@@ -57,7 +57,7 @@
                 @Html.DisplayFor(modelItem => item.AppUser.FullName)
             </td>
             <td>
-                    <a asp-action="Details"  asp-route-id="@item.TransactionId" title="Details">
+                    <a asp-action="Details" asp-route-id="@item.TransactionId" asp-route-returnUrl="@Url.Action("Index", "Transaction")" title="Details">
                         <img src="~/Icons/research.png" alt="Details" style="width:50px; height:50px;">
                     </a>
             </td>
